alignment fixes
(for different h1 tags)

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://djmcloud.danieljcmkeown.com/lakeballinger/
 Author: Love Birds Consulting
 Author URI: http://lovebirdsconsulting.com/
 Description: The first 2015 theme for WordPress from LoveBirdsConsulting
-Version: 0.5.2
+Version: 0.5.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: lake_ballinger
@@ -34,9 +34,14 @@ aside {
     padding: 3px;
 }
 
-h1 {
-    padding-left: 8px;
+h1.entry-title  {
+    padding-left: 5px;
     padding-top: 14px;
+}
+
+h1.ballingertitle {
+    padding-left: 8px;
+    padding-top: 5px;
 }
 
 div #respond {
